kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/004_cyclicCompositions_05.kmt
/* $Id: 004_cyclicCompositions_05.kmt,v 1.1 2006-11-17 09:05:14 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* cyclic composition */
class A {
    attribute b : B[0..1]#a
}
class B {
	attribute a : A[0..*]#b
}

